# QtDemo

./: .cproject  .gdbinit  .gitignore  .project  CMakeLists.txt  qt_demo.cpp
source/: qt_demo.cpp
